<resources>
    <string name="app_name">Map Survey</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- About Us-->
    <string name="about_us_title">Open Source Licenses</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>

    <!-- Splash-->
    <string name="title_activity_splash">Splash Activity</string>
    <string name="about_us">ABOUT US</string>
    <string name="version">VER 1.0.0</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="start_survey">Start Survey</string>
    <string name="file_managment">File Management</string>
    <string name="file_managmentwithsmallm">File management</string>

    <!-- File Management Menu-->
    <string name="import_data_bundle">Import Data Bundle</string>
    <string name="display_data_bundle">Display Data Bundle</string>
    <string name="package_data_points">Package Data Points</string>
    <string name="export_data_package">Export Data Package</string>
    <string name="import_surveyed_data_points">Import Surveyed Data Points</string>
    <string name="manage_gps">Manage GPS Tracks</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="button_back">Back</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_display_data_bundle">DisplayDataBundleActivity</string>
    <string name="title_activity_start_survey">StartSurveyActivity</string>

    <!--PackageDataPoints-->
    <string name="pdp">Package Data Points</string>
    <string name="button_package">Package</string>
    <string name="package_data_points_successful">Successful Package Operation</string>
    <!--ExportDataPackage-->
    <string name="button_exportpackage">Select Destination</string>
    <string name="button_exportpackage_grid">Export Now</string>


    <!--ImportActivity-->
    <string name="tite_importsurveyeddatapointsactivity">Import Surveyed Data Points</string>
    <!--Gps Track Activity-->
    <!--StartSurveyInChoicesActivity-->
    <string name="openMap">Open Map</string>

    <!--Populate Template Activity-->
    <string name="title_populatetemplateactivity">Populate Template</string>

    <!--Point Photos-->
    <string name="title_pointphotos">Point Photos</string>
    <string name="btn_delete_pointphotos">Delete Selected</string>
    <string name="btn_finishtakingphoto_pointphotos">Finished Taking Photos</string>
</resources>
